chore(update): fix dasbhoard icon alignments

--- a/src/content/Login/login.scss
+++ b/src/content/Login/login.scss
@@ -27,10 +27,5 @@
             max-width: 100%;
             width: 100%;
         }
-        .loading-spinner {
-            display: inline-block;
-            position: relative;
-            top: 2px;
-        }
     }
 }
